Fixed variables on account listener and twig

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/Account/UsernameRetrieval.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/Account/UsernameRetrieval.email.twig
@@ -6,7 +6,7 @@
     You have recently requested to retrieve your username using the Forgot Username form on our system.
 
     <b>
-        username: person.getAccount.getUserId
+        username:  {{ person.getAccount.getUserId }}
     </b>
     <br>
 
