Text changes suggested by PO

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/forgotUsername.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/forgotUsername.html.twig
@@ -20,8 +20,8 @@
         {% if userNameFound == true %}
             <div>
                 <h2 class="element-invisible">Success message</h2>
-                The Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) has identified your email address exists with
-                an GRIIDC account, and We have emailed you the username to {{ emailId }}.
+                The Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) has confirmed
+                that your email address is associated with a GRIIDC account. Your username has been emailed to  {{ emailId }}.
                 For any additional help please contact<a href="griidc@gomri.org">griidc@gomri.org</a>.
             </div>
         {% else %}
