Added missing curly braces

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/Account/UsernameRetrieval.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/Account/UsernameRetrieval.email.twig
@@ -26,7 +26,7 @@
 
     You have recently requested to retrieve your username using the Forgot Username form on our system.
 
-    username: person.getAccount.getUserId
+    username: {{ person.getAccount.getUserId }}
 
     
     Thank you,
