--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/forgotUsername.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/forgotUsername.html.twig
@@ -17,19 +17,10 @@
         </p>
     </form>
     {% else %}
-        {% if userNameFound == true %}
-            <div>
-                <h2 class="element-invisible">Success message</h2>
-                The Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) has confirmed
-                that your email address is associated with a GRIIDC account. Your username has been emailed to  {{ emailId }}.
-                For any additional help please contact <a href="griidc@gomri.org">griidc@gomri.org</a>.
-            </div>
-        {% else %}
-            <div class="messages error">
-                <h2 class="element-invisible">Error message</h2>
-                No account is associated with this email address: {{ emailId }}
-                For any additional help please contact <a href="griidc@gomri.org">griidc@gomri.org</a>.
-            </div>
-        {% endif %}
+        <div>
+            <h2 class="element-invisible">Success message</h2>
+            If that email address is found in our system, we will send the associated username
+            to the found email address. For any additional help please contact <a href="griidc@gomri.org">griidc@gomri.org</a>.
+        </div>
     {% endif %}
 {% endblock %}
