Added div class for the twig and added the email id variable back

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/forgotUsername.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/forgotUsername.html.twig
@@ -17,7 +17,7 @@
         </p>
     </form>
     {% else %}
-        <div>
+        <div class="messages status">
             <h2 class="element-invisible">Success message</h2>
             If that email address is found in our system, we will send the associated username
             to the found email address. For any additional help please contact <a href="griidc@gomri.org">griidc@gomri.org</a>.
