Added number of versions.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
@@ -77,12 +77,20 @@
 <h1>UDI: <span class="udi-title"></span></h1>
 <table class="side-table">
     <tr>
-        <td colspan="8" width="100%">
-            <label>UDI:</label>
-            <input name="udi" size="100">
-            <button id="get-versions-button" type="button">Get UDI</button>
+        <td width="50%">
+            <span style="white-space:nowrap;">
+                <label>UDI:</label>
+                <input name="udi" size="100">
+                <button id="get-versions-button" type="button">Get UDI</button>
+            </span>
         </td>
-    <tr>
+        <td width="25%">
+            <label>Number of Versions:</label>
+            <div id="numversions">
+        </td>
+    </tr>
+</table>
+<table class="side-table">
     <tr>
         <td>
             <div class="left-version">
