Added dataset status.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
@@ -88,6 +88,10 @@
             <label>Number of Versions:</label>
             <div id="numversions">
         </td>
+        <td width="25%">
+            <label>Dataset State:</label>
+            <div id="datasetstatus">
+        </td>
     </tr>
 </table>
 <table class="side-table">
@@ -104,8 +108,12 @@
                         </td>
                     </tr>
                     <tr>
-                            <td>
-                            <label>Status:</label>
+                        <td>
+                            <label>Dataset Status:</label>
+                            <div class="dataset-status">STATUS</div>
+                        </td>
+                        <td>
+                            <label>Submission Status:</label>
                             <div class="submission-status">STATUS</div>
                         </td>
                         <td>
@@ -133,7 +141,11 @@
                     </tr>
                     <tr>
                         <td>
-                            <label>Status:</label>
+                            <label>Dataset Status:</label>
+                            <div class="dataset-status">STATUS</div>
+                        </td>
+                        <td>
+                            <label>Submission Status:</label>
                             <div class="submission-status">STATUS</div>
                         </td>
                         <td>
