Modify according to reviews by PO

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/form.html.twig
@@ -1,23 +1,13 @@
 <div class="cleair">
     <fieldset>
-        <table>
-            <tr>
-                <td>
-                    <strong>NOTE:</strong>
-                <td/>
-                <td>
-                    <ul style="color:grey">
-                        <li>You must have an approved Dataset Information Form (DIF) to fill out and submit a Dataset Submission Form. The red asterisk (<span class="emRequired"/>) is used to indicate required fields. If you need assistance while completing this form, please contact <a href=mailto:griidc@gomri.org>griidc@gomri.org</a>.</li>
-                        <li>By submitting content to GRIIDC you warrant that you have sufficient rights to make this content available under a <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">CC0 license</a>.</li>
-                    </ul>
-                </td>
-            <tr>
-        </table>
+                    <strong>NOTE:
+                       By submitting content to GRIIDC you warrant that you have sufficient rights to make this content available under a <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">CC0 license</a>.
+                    </strong>
     </fieldset>
 
     <fieldset>
         <p>
-            Please enter the Unique Dataset Identifier (UDI) that GRIIDC assigned to your dataset and select "Load Dataset" to load the most recent information for your dataset.
+            Please enter the Unique Dataset Identifier (UDI) that GRIIDC assigned to your dataset and select "Load Dataset" to load the most recent information for your dataset. You must have an approved Dataset Information Form (DIF) to fill out and submit a Dataset Submission Form.
         </p>
         <form id="regidform">
             <label for="regid"><b>Unique Dataset Identifier (UDI): </b></label>
