Changed style to look like production map style (orange).

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/extent.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/extent.html.twig
@@ -15,7 +15,7 @@
                     <div id="spatial">
                         <label><span class="emRequired"/>Spatial Extent</label>
                         <div>
-                            <div style="width:500px;height:300px;" class="smallmap" data-extent="{{ form.vars.value.spatialExtent }}"/>
+                            <div style="width:90%;height:600px;" class="smallmap" data-extent="{{ form.vars.value.spatialExtent }}"/>
                         </div>
                         {{ form_row(form.spatialExtent) }}
                     </div>
