Changed date to accepted date.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/metadata.markup.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/metadata.markup.twig
@@ -20,7 +20,7 @@
       ],
       "@type" : "Organization"
    },
-   "datePublished" : "{% if dataset.datasetSubmission %}{{dataset.datasetSubmission.submissionTimeStamp|date('c', 'UTC')}}{% else %}{{ dataset.dif.modificationTimeStamp|date('c', 'UTC') }}{% endif %}",
+   "datePublished" : "{{dataset.acceptedDate|date('c', 'UTC') }}",
    "@context" : "http://schema.org"
 }
 </script>
