Needed to at @dataset, some json errors.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/metadata.markup.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/metadata.markup.twig
@@ -15,12 +15,14 @@
             "email" : "griidc@gomri.org",
             "contactType" : "customer service",
             "availableLanguage" : "English",
+            "url" : "https://data.gulfresearchinitiative.org/",
             "@type" : "ContactPoint"
-         },
+         }
       ],
       "@type" : "Organization"
    },
    "datePublished" : "{{dataset.acceptedDate|date('c', 'UTC') }}",
+   "@type" : "Dataset",
    "@context" : "http://schema.org"
 }
 </script>
