Changed contact type to "technical support"

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/metadata.markup.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/metadata.markup.twig
@@ -13,7 +13,7 @@
       "contactPoint" : [
          {
             "email" : "griidc@gomri.org",
-            "contactType" : "customer service",
+            "contactType" : "technical support",
             "availableLanguage" : "English",
             "url" : "https://data.gulfresearchinitiative.org/",
             "@type" : "ContactPoint"
