--- a/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
@@ -58,6 +58,7 @@
         '@PelagosAppBundle/Resources/public/js/pelagosNoty.js'
         '@FOSJsRoutingBundle/Resources/public/js/router.js'
         '@PelagosAppBundle/Resources/public/js/datasetReview.js'
+        '@PelagosAppBundle/Resources/public/js/diff_match_patch.js'
         '@PelagosAppBundle/Resources/public/js/sidebyside.js'
         '@PelagosAppBundle/Resources/public/js/geoviz.js'
         '@PelagosAppBundle/Resources/public/js/mapWizard.js'
