Changed load notify, added a button to show diffs instead of autoload.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/SideBySide/index.html.twig
@@ -83,6 +83,7 @@
                 <label>UDI:</label>
                 <input name="udi" size="100">
                 <button id="get-versions-button" type="button">Get UDI</button>
+                <button id="show-diff-button" type="button">Show Differences</button>
             </span>
         </td>
         <td width="25%">
