Added data use policy to external dload splash screen

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Download/download-external-resource-splash-screen.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Download/download-external-resource-splash-screen.html.twig
@@ -14,16 +14,20 @@
 
         <div style="border: 1px solid #aaa; padding: 10px; margin-top: 20px; border-radius: 4px;">
             <p style="margin-top:0">
-                <strong>DISCLAIMER:</strong> The Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) aggregates data from researchers funded by the Gulf of Mexico Research Initiative and other scientists working in the region. These data are furnished "as is" for the convenience of all data users. GRIIDC makes no warranties (including no warranties as to merchantability, timeliness or fitness) either expressed or implied with respect to the data or their fitness for any specific application.  This particular dataset is not hosted directly by GRIIDC, so additional terms and conditions may be imposed by the hosting entity.
+                All materials on this website are made available to GRIIDC and in turn to you "as-is." There is no
+                warranty (expressed or implied) to these materials, their title, accuracy, non-infringement of third
+                party rights, or fitness for any particular purpose, including the performance or results you may
+                obtain from their use. Use these materials at your own risk. Under no circumstances shall GRIIDC be
+                liable for any direct, incidental, special, consequential, indirect, or punitive damages that result
+                from the use or the inability to use either this website or the materials available via this website.
+                If you are dissatisfied with any website feature, content, or terms of use, your sole and exclusive
+                remedy is to discontinue use.
             </p>
             <p style="margin-top:0">
                 This particular dataset is not hosted directly by GRIIDC, so additional terms and conditions may be
                 imposed by the hosting entity.
             </p>
             <div style="text-align:center;">
-                <p>
-                    By using the link above, you agree to the GRIIDC terms in the above disclaimer.
-                </p>
                 <p style="margin-bottom:0">
                     <button class="close_button" style="font-weight:bold;margin:10px 10px 10px 0px;">Cancel</button>
                 </p>
