--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/details.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/details.html.twig
@@ -1,3 +1,8 @@
+<h2>Suggested Citation:</h2>
+<div>
+    {{ dataset.citation|default }}
+</div>
+
 <h2>Abstract:</h2>
 <div>
     {{ dataset.abstract|default }}
