Don't style like it's 1999.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Download/download-external-resource-splash-screen.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Download/download-external-resource-splash-screen.html.twig
@@ -12,7 +12,7 @@
         <h3 style="text-align:center;">The dataset you selected is hosted by an external repository.</h3>
         {% endif %}
 
-        <div style="border: 1px solid #aaa; padding: 10px; margin-top: 20px; border-radius: 4px;">
+        <div style="border: 1px solid #aaa; padding: 10px; margin-top: 20px; margin-bottom: 10px; border-radius: 4px;">
             <p style="margin-top:0">
                 All materials on this website are made available to GRIIDC and in turn to you "as-is." There is no
                 warranty (expressed or implied) to these materials, their title, accuracy, non-infringement of third
@@ -33,7 +33,6 @@
                 </p>
             </div>
         </div>
-        &nbsp;
         <div style="border: 1px solid #aaa; padding: 10px; border-radius: 4px;">
             <p style="margin-top:0">
             <strong>UDI:</strong> {{dataset.udi}}<br />
