--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/distribution-info.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/distribution-info.html.twig
@@ -34,6 +34,25 @@
 </fieldset>
 
 <fieldset>
+    <legend>ERDDAP Info</legend>
+    <table class="tab-table">
+        <tr>
+            <td>
+				<span class="helpSection">
+					{% image '@PelagosAppBundle/Resources/public/images/info32.png' %}
+                        <img class="info" src="{{ asset_url }}">
+                    {% endimage %}
+                    <div class="tooltiptext">
+						Please provide the ERDDAP Url.
+					</div>
+				</span>
+                {{ form_row(form.erddapUrl) }}
+            </td>
+        </tr>
+    </table>
+</fieldset>
+
+<fieldset>
     <legend>File Information</legend>
     <table class="tab-table">
         <tr>
