Added the version 2 for gomri report using new parameters to build queries

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
@@ -38,7 +38,8 @@
                 Reports:
                 <ul>
                     <li><a href="{{ path("pelagos_app_ui_reportresearchgroupdatasetstatus_default") }}">Report Research Group Dataset Status</a></li>
-                    <li><a href="{{ path("pelagos_app_ui_gomrireport_default") }}">GOMRI Dataset Report</a></li>
+                    <li><a href="{{ path("pelagos_app_ui_gomrireport_default") }}">GOMRI Dataset Report(v1)</a></li>
+                    <li><a href="{{ path("pelagos_app_ui_gomrireport_versiontworeport") }}">GOMRI Dataset Report(v2)</a></li>
                     <li><a href="{{ path("pelagos_app_ui_datasetdownloadreport_default") }}">Dataset Download Report</a></li>
                     <li><a href="{{ path("pelagos_app_ui_searchtermsreport_default") }}">Search Terms Report</a></li>
                     <li><a href="{{ path("pelagos_app_ui_datasetdownloadreport_timestampreport") }}">Dataset Download TimeStamp Report</a></li>
