--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
@@ -11,6 +11,7 @@
             <li><a href="{{ path("pelagos_app_ui_datasetreview_default") }}">Dataset Review</a></li>
             <li><a href="{{ path("pelagos_app_ui_sidebyside_default") }}">Side-by-Side Review</a></li>
             <li><a href="{{ path("pelagos_app_ui_endreview_default") }}">End Review Tool</a></li>
+            <li><a href="{{ path("pelagos_app_ui_remotelyhosteddatasets_default") }}">Remotely Hosted Datasets</a></li>
             <li>
                 Lists
                 <ul>
