--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/RemotelyHostedDatasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/RemotelyHostedDatasets.html.twig
@@ -3,7 +3,8 @@
 {% block head %}
     {{ add_library (
         [
-            'ui.dialog'
+            'ui.dialog',
+            'ui.widget'
         ]
     ) }}
 
@@ -23,11 +24,14 @@
     ) }}
 
     {% stylesheets
-        '@PelagosAppBundle/Resources/public/css/entity.css' %}
+        '@PelagosAppBundle/Resources/public/css/remotelyhosted-datasets.css'
+        '@PelagosAppBundle/Resources/public/css/entity.css'
+    %}
         {{ add_css(asset_url) }}
     {% endstylesheets %}
 
     {% javascripts
+        '@FOSJsRoutingBundle/Resources/public/js/router.js'
         '@PelagosAppBundle/Resources/public/js/common.js'
         '@PelagosAppBundle/Resources/public/js/remotelyHostedDatasets.js'
     %}
@@ -44,36 +48,53 @@
 ] %}
 
 {% block body %}
-    <h2> Remotely Hosted Datasets</h2>
-    <table
-            id="remotelyHostedDatasetsTable"
-            class="stripe"
-            width="100%"
-            data-ajax='{
-                "url": "{{ path("pelagos_api_datasets_get_collection", {"datasetSubmission.datasetFileTransferStatus": "RemotelyHosted", "_properties": properties | join(',')}) }}",
-                "dataSrc": "",
-                "cache": true
-            }'
-            data-columns='[
-                {"data": "id"},
-                {"data": "udi"},
-                {"data": "datasetSubmission.datasetFileUri"},
-                {"data": "datasetStatus"}
-            ]'
-            data-order='[
-                [ 1, "desc"]
-            ]'
-    >
-        <thead>
-        <tr>
-            <th>Dataset ID</th>
-            <th>UDI</th>
-            <th>URL</th>
-            <th>Dataset Status</th>
-        </tr>
-        </thead>
-        <tbody>
+    <h1> Remotely Hosted Datasets</h1>
 
-        </tbody>
-    </table>
+    <div class="cleair">
+        <fieldset>
+            <form id="updateForm">
+                <label for="udi"><b>Unique Dataset Identifier (UDI): </b></label>
+                <input minlength="16" type="text" id="udi" name="udi" style="width: 80%" required>
+                <button name="updatebutton" id="updatebutton"
+                        type="button"
+                        onclick="window.location.href='{{ path('pelagos_app_ui_remotelyhosteddatasets_default') }}?udi=' +
+                                document.getElementById('udi').value.trim();">Mark as Remotely Hosted
+                </button>
+                <label class="error" for="udi"></label>
+            </form>
+        </fieldset>
+        <fieldset>
+            <table
+                    id="remotelyHostedDatasetsTable"
+                    class="stripe"
+                    width="100%"
+                    data-ajax='{
+                        "url": "{{ path("pelagos_api_datasets_get_collection", {"datasetSubmission.datasetFileTransferStatus": "RemotelyHosted", "_properties": properties | join(',')}) }}",
+                        "dataSrc": "",
+                        "cache": true
+                    }'
+                    data-columns='[
+                        {"data": "id"},
+                        {"data": "udi"},
+                        {"data": "datasetSubmission.datasetFileUri"},
+                        {"data": "datasetStatus"}
+                    ]'
+                    data-order='[
+                        [ 1, "desc"]
+                    ]'
+            >
+                <thead>
+                <tr>
+                    <th>Dataset ID</th>
+                    <th>UDI</th>
+                    <th>URL</th>
+                    <th>Dataset Status</th>
+                </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
+        </fieldset>
+    </div>
 {% endblock %}
