reload table on success, change input field label

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/RemotelyHostedDatasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/RemotelyHostedDatasets.html.twig
@@ -56,7 +56,7 @@
     <div class="cleair">
         <fieldset>
             <form id="updateForm">
-                <label for="udiInput"><b>Unique Dataset Identifier (UDI): </b></label>
+                <label for="udiInput"><b>Unique Dataset Identifier - UDI (Accepted status only): </b></label>
                 <input minlength="16" type="text" id="udiInput" name="udiInput" style="width: 80%" required>
                 <button name="updateButton" id="updateButton"
                         type="button" disabled>
