use terminateresponse, show Dataset Url on typing UDI

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/List/RemotelyHostedDatasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/List/RemotelyHostedDatasets.html.twig
@@ -62,7 +62,7 @@
                         type="button" disabled>
                     Mark as Remotely Hosted
                 </button>
-                <label class="error" for="udiInput"></label>
+                <div id="urlDiv" hidden><b>URL: </b><span id="urlText" name="urlText"></span></div>
             </form>
         </fieldset>
         <fieldset>
