Added ERDDAP link to dataland.

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataland-details.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataland-details.css
@@ -166,6 +166,10 @@ span.attr {
     vertical-align: middle;
 }
 
+#erddaplink {
+    padding-top: 5px;
+}
+
 #tabs li.ui-state-disabled {
     opacity: .5;
 }
