--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/remotelyhosted-datasets.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/remotelyhosted-datasets.css
@@ -19,6 +19,10 @@
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
 }
 
+.red {
+    background-color: #ff9da7 !important;
+}
+
 fieldset {
     border: 1px dotted #AAA;
 }
