--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -1,5 +1,6 @@
 {% extends "PelagosAppBundle::layout.html.twig" %}
 
 {% block body %}
-    Sorry, we cannot find what you are looking for. Please contact us at <a href="mailto:griidc@gomri.org">griidc@gomri.org</a>. Sorry for any inconvenience.
+Page or Resource Not Found (404 Error)<br />
+We apologize, but the page or resource for which you were searching does not exist.
 {% endblock %}
