--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/UI.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/UI.html.twig
@@ -1,6 +1,10 @@
 {% extends "PelagosAppBundle::layout.html.twig" %}
 
 {% block head %}
+    
+    <link rel="stylesheet" href="{{ asset('/build/layout.css') }}">
+    <script src="{{ asset('/build/layout.js') }}"></script>
+
     {{
         add_library (
             [
