--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DataDiscovery/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "PelagosAppBundle:template:UI.html.twig" %}
+{% extends "PelagosAppBundle::layout.html.twig" %}
 
 {% block head %}
     {{ parent() }}
