--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/UI.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/UI.html.twig
@@ -1,6 +1,8 @@
 {% extends "PelagosAppBundle::layout.html.twig" %}
 
 {% block head %}
+
+    {{ parent() }}
     
     <link rel="stylesheet" href="{{ asset('/build/layout.css') }}">
     
