--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -495,7 +495,7 @@ div#header #griidc-logo-wrapper {
 }
 
 /* Jira buttons */
-#atlassian-btns {
+.atlassian-btns {
     z-index: 10000;
     position: fixed;
     width: 500px;
@@ -504,19 +504,18 @@ div#header #griidc-logo-wrapper {
     left: 50%;
     margin-top: -2px;
     margin-left: -122px;
-
 }
 
-#atlassian-btns li {
+.atlassian-btns li {
     display: inline-block;
 }
 
-#atlassian-btns li a {
+.atlassian-btns li a {
     color: white !important;
     font-size: 9pt;
     font-family: sans-serif;
     font-weight: normal;
-    padding: 5px;
+    padding: 0 5px 0 5px;
     border-width: 0px 1px 1px;
     border-top-style: initial;
     border-right-style: solid;
@@ -534,4 +533,5 @@ div#header #griidc-logo-wrapper {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     border-radius: 0 0 5px 5px;
     top: 0px;
+    position: relative !important;
 }
